--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://simon.nyberg.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Simon Nyberg'
 theme = "so-simple"
